# advent-of-code

./: .gitignore  :w  Cargo.toml  README.md
days/eight/: Cargo.toml
days/eight/src/: main.rs
days/eighteen/: Cargo.toml
days/eighteen/src/: main.rs
days/eleven/src/: main.rs
days/fifteen/: Cargo.toml
days/fifteen/src/: main.rs
days/five/src/: main.rs
days/four/src/: main.rs
days/fourteen/: Cargo.toml
days/fourteen/src/: main.rs
days/nine/: Cargo.toml
days/nine/src/: main.rs  second_try.rs
days/nineteen/: Cargo.toml
days/nineteen/src/: main.rs
days/one/src/: main.rs
days/seven/src/: main.rs
days/seventeen/: Cargo.toml
days/seventeen/src/: main.rs
days/six/: Cargo.toml
days/six/src/: main.rs
days/sixteen/src/: main.rs
days/ten/: Cargo.toml
days/ten/src/: main.rs
days/thirteen/src/: main.rs
days/three/src/: main.rs
days/twelve/src/: main.rs
days/twenty/: Cargo.toml
days/twenty/src/: main.rs
days/twentyone/: Cargo.toml
days/twentyone/src/: main.rs
days/twentythree/: Cargo.toml
days/twentythree/src/: main.rs
days/twentytwo/: Cargo.toml
days/twentytwo/src/: main.rs
days/two/src/: main.rs
elves/: Cargo.toml
